<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="40dp"
        android:paddingRight="40dp">

        <ImageView
            android:id="@+id/logoBig"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@mipmap/ic_launcher_round"
            app:layout_constraintBottom_toTopOf="@id/etMobile"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.example.administrator.rolemanage.view.ClearEditText
            android:id="@+id/etMobile"
            style="@style/commentEditTextBottomLine"
            android:layout_marginTop="50dp"
            android:background="@drawable/at_etbg_bottom_line"
            android:drawablePadding="@dimen/dp_16"
            android:hint="@string/hint_input_mobile"
            android:inputType="number"
            android:maxLength="11"
            app:layout_constraintBottom_toTopOf="@id/etPws" />

        <com.example.administrator.rolemanage.view.ClearEditText
            android:id="@+id/etPws"
            style="@style/commentEditTextBottomLine"
            android:layout_marginTop="@dimen/dp_12"
            android:drawablePadding="@dimen/dp_16"
            android:hint="@string/hint_input_pws"
            android:inputType="textPassword"
            android:maxLength="20"
            app:layout_constraintBottom_toTopOf="@id/centerGuideLine" />


        <!--=================================================================================-->

        <android.support.constraint.Guideline
            android:id="@+id/centerGuideLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />

        <!--================================================================================-->


        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginTop="@dimen/dp_20"
            android:background="@drawable/shape_yellow_corner4_solid"
            android:gravity="center"
            android:padding="@dimen/dp_12"
            android:text="@string/login"
            android:textColor="@color/bottom_btn_color"
            android:textSize="@dimen/textSize_middle"
            app:layout_constraintTop_toTopOf="@id/centerGuideLine" />

    </android.support.constraint.ConstraintLayout>
</FrameLayout>